# baby-ai

./: .env.example  README.md  docker-compose.yml
api/: .gitignore  Dockerfile  README.md  pyproject.toml
api/src/: config.py  db.py  decorators.py  docs-retrieval.py  llm.py  main.py
ollama/: Dockerfile  download_model.sh  healthcheck.sh  start-ollama.sh
web/: Dockerfile  README.md  package-lock.json  package.json
web/src/lib/: style.css
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/test/: +page.svelte
