[tool.poetry]
name = "baby-ai-api"
version = "0.1.0"
description = ""
authors = ["Jo Kroese <jo@jokroese.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
langchain = ">=0.3,<0.4"
langserve = {extras = ["all"], version = ">=0.3,<0.4"}
langchain-community = ">=0.3,<0.4"
langchain-core = ">=0.3,<0.4"
unstructured = {extras = ["pdf"], version = "^0.15.13"}
langchain-ollama = "^0.2.0"
aiosqlite = "^0.20.0"
langchain-text-splitters = "^0.3.0"
langchain-openai = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
